# predict_electric_vehicle_charging_loads

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  predict_electric_vehicle_charging_loads.ipynb  pyproject.toml  requirements.txt  rows_to_score.csv  scored.csv  streamlit_app.py
.github/workflows/: ci.yml
configs/: default.yaml
docs/: DATASETS.md  FEATURES_AND_IMPROVEMENTS_PLAN.md
models/: README.md  model.pth
notebooks/: quickstart.ipynb
src/ev_charging/: __init__.py  __main__.py  api.py  baselines.py  cli.py  config.py  constants.py  data.py  evaluate.py  extra_data.py  features.py  pipeline.py  train_mlp.py  uncertainty.py
tests/: test_build_predict_input.py  test_data.py  test_features.py  test_smoke_train.py
