[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ev-charging"
version = "0.1.0"
description = "Predict residential EV charging loads (kWh) from session and traffic features"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "EV Charging Loads Project" }]
dependencies = [
    "numpy>=1.26,<3",
    "pandas>=2.1,<3",
    "matplotlib>=3.8,<4",
    "torch>=2.2,<3",
    "scikit-learn>=1.4,<2",
    "PyYAML>=6.0.1,<7",
    "joblib>=1.3,<2",
]

[project.optional-dependencies]
api = ["fastapi>=0.115,<1", "uvicorn[standard]>=0.32,<1"]
ui = ["streamlit>=1.39,<2"]
dev = ["pytest>=8,<9", "ruff>=0.8,<1", "streamlit>=1.39,<2"]

[project.scripts]
ev-charging = "ev_charging.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 120
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
